<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:id="@+id/mainLoginLayout"
    android:orientation="vertical" >

    <View
        android:layout_width="wrap_content"
        android:layout_height="80dip" />
	
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/emptyString"
            android:src="@drawable/logo" />
    
    <LinearLayout
        android:id="@+id/Loginlayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dip" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/textoPadrao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:layout_marginLeft="9dip"
                    android:text="@string/userName" />

                <EditText
                    android:id="@+id/userName"
                    style="@style/textoPadrao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="9dip"
                    android:inputType="text"
                    android:padding="3dip" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/textoPadrao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:layout_marginLeft="9dip"
                    android:text="@string/userPassword" />

                <EditText
                    android:id="@+id/userPassword"
                    style="@style/textoPadrao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="9dip"
                    android:inputType="textPassword"
                    android:padding="3dip" />
            </TableRow>
        </TableLayout>

        <CheckBox
            android:id="@+id/saveUserInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="9dip"
            android:text="@string/saveUserInformation" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="right"
            android:layout_marginRight="9dip">

            <TableRow >
                <Button
                    android:layout_width="90dip"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnIniciaCadastro"
                    android:text="@string/save" />

                <Button
                    android:layout_width="90dip"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnLogin"
                    android:text="@string/login" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    
</LinearLayout>