<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nomeDetalheFilme"
            style="@style/movieDetailRow"
            android:layout_marginLeft="4dip"
            android:layout_marginTop="4dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RatingBar
                        android:id="@+id/avaliacaoDetalheFilme"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/anoDetalheFilme"
                    style="@style/styleDetalhes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/styleDetalhes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dip"
                        android:text="@string/duracao" />

                    <TextView
                        android:id="@+id/duracaoDetalheFilme"
                        style="@style/styleDetalhes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonPlay"
                    style="@style/buttonPlay"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/assistir" />

                <Button
                    android:id="@+id/buttonAddPLaylist"
                    style="@style/buttonPlay"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/incluirPLaylist" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imagemDetalheFilme"
                    android:layout_width="130dip"
                    android:layout_height="170dp"
                    android:layout_marginBottom="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:background="#33AD5C"
                    android:contentDescription="@string/emptyString"
                    android:padding="3dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/vingadores" />
            </LinearLayout>
        </LinearLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dip"
            android:padding="4dip"
            android:shrinkColumns="1" >

            <TableRow>

                <TextView
                    style="@style/labelDetalhes"
                    android:layout_marginRight="4dip"
                    android:text="@string/direcao" />

                <TextView
                    android:id="@+id/labelDiretores"
                    style="@style/styleDetalhes" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/labelDetalhes"
                    android:layout_marginRight="4dip"
                    android:text="@string/elenco" />

                <TextView
                    android:id="@+id/labelElenco"
                    style="@style/styleDetalhes" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/labelDetalhes"
                    android:layout_marginRight="4dip"
                    android:text="@string/sinopse" />

                <TextView
                    android:id="@+id/labelSinopse"
                    style="@style/styleDetalhes" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>